--- a/gtk-3.0/widgets/_sidebar.scss
+++ b/gtk-3.0/widgets/_sidebar.scss
@@ -58,21 +58,22 @@
 
     //elementary os file manager
     &.source-list{
-      background: $base_color;
+      background: $_sidebar_color;
       padding: 4px 0px;
       &.view{
         transition: all .12s ease-in;
         &:selected {
-          padding-left: 4px;
-          background: transparentize(#eee, 0.5);
-          color: #ACACAC;
-          border-left: 4px solid $selected_bg_color;
+          background:  transparentize(darken($_sidebar_color, 3%), 0.07);
+          color: #98abb2;
           &:active { box-shadow: inset 0 2px 3px -1px transparentize(black, 0.5); }
     
           &.has-open-popup,
-          &:hover { background-color: transparentize($selected_bg_color, 0.1); }
+          &:hover {
+            background:  transparentize(darken($_sidebar_color, 3%), 0.07);
+            color: #fff;
+          }
     
-          &:backdrop { background-color: $backdrop_selected_bg_color; }
+          &:backdrop {  background: transparentize(darken($_sidebar_color, 3%), 0.07); }
         }
         &:hover, iconview.source-list:hover { 
             background-color: if(variant == light, transparentize($bg_color, 0.6), transparentize($bg_color, 0.6)); 
